네이버 지도 적용

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -187,6 +187,9 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    // 네이버 지도 SDK
+    implementation 'com.naver.maps:map-sdk:3.10.0'
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
