--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,5 +33,10 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
+
+        // 네이버 지도 저장소
+        maven {
+            url 'https://navercorp.bintray.com/maps'
+        }
     }
 }
