--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-map": "0.0.1",
+    "react-native-nmap": "0.0.52",
     "react-native-reanimated": "^1.13.1",
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^3.1.8",
