--- a/ios/chikaApp/Info.plist
+++ b/ios/chikaApp/Info.plist
@@ -24,6 +24,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NMFClientId</key>
+	<string>htnc7h3vi5</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
@@ -37,8 +39,22 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Use camera for take teeth picture</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Get user current location for near dentist</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Get user current location for near dentist</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Get user current location for near dentist</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>For user take and save photos</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>For user to register photos </string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,17 +67,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Use camera for take teeth picture</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>For user to register photos </string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>For user take and save photos</string>
-	<key>NMFClientId</key>
-	<string>htnc7h3vi5</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
