--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.63.3",
     "react-native-above-keyboard": "^1.3.0",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
@@ -31,6 +32,7 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-status-bar-height": "^2.5.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
