--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.9.3",
     "@types/react-redux": "^7.1.9",
     "axios": "^0.21.0",
+    "base-64": "^1.0.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-above-keyboard": "^1.3.0",
