--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/image-editor": "^2.3.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.2",
+    "@react-navigation/material-top-tabs": "^5.3.9",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "@types/react-redux": "^7.1.9",
@@ -39,6 +40,7 @@
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-status-bar-height": "^2.5.0",
+    "react-native-tab-view": "^2.15.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.0"
