--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/datetimepicker": "^3.0.4",
     "@react-native-community/image-editor": "^2.3.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-seoul/kakao-login": "^2.10.1",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/material-top-tabs": "^5.3.9",
     "@react-navigation/native": "^5.7.6",
