--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         targetSdkVersion = 29
 
         googlePlayServicesVersion = "17.0.0"
+        googlePlayServicesVisionVersion = "19.0.0"
     }
     repositories {
         google()
@@ -40,5 +41,11 @@ allprojects {
         maven {
             url 'https://navercorp.bintray.com/maps'
         }
+
+        // 카카오톡
+        maven {
+            url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/'
+        }
+
     }
 }
