구글 로그인 구현

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,6 +9,8 @@ target 'chikaApp' do
   use_react_native!(:path => config["reactNativePath"])
 
   pod 'react-native-image-editor', :path => '../node_modules/@react-native-community/image-editor'
+  pod 'Firebase/Analytics'
+  pod 'GoogleSignIn', '~> 5.0.2'
 
   target 'chikaAppTests' do
     inherit! :complete
