--- a/ios/chikaApp/Info.plist
+++ b/ios/chikaApp/Info.plist
@@ -30,6 +30,14 @@
 				<string>kakao0528ffa400f348fc61a241b399e8d8d1</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.104168934751-bbskptulttj6n5f2eia02g2oteebhenc</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
