--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-tab-view": "^2.15.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
+    "rn-sliding-up-panel": "^2.4.4",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
