--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,8 +5,10 @@ platform :ios, '10.0'
 
 target 'chikaApp' do
   config = use_native_modules!
-
   use_react_native!(:path => config["reactNativePath"])
+  
+  # Explicitly include Yoga if you are using RN >= 0.42.0
+  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
 
   pod 'react-native-image-editor', :path => '../node_modules/@react-native-community/image-editor'
   pod 'Firebase/Analytics'
