--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-native-above-keyboard": "^1.3.0",
     "react-native-actionsheet": "^2.4.2",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-dash": "0.0.11",
+    "react-native-device-info": "^7.2.1",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-iphone-x-helper": "^1.2.1",
