--- a/ios/chikaApp/Info.plist
+++ b/ios/chikaApp/Info.plist
@@ -45,6 +45,8 @@
 	<string>0528ffa400f348fc61a241b399e8d8d1</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>tel</string>
+		<string>telprompt</string>
 		<string>kakaokompathauth</string>
 		<string>kakao0528ffa400f348fc61a241b399e8d8d1</string>
 		<string>kakaolink</string>
@@ -92,8 +94,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
