--- a/package.json
+++ b/package.json
@@ -20,22 +20,29 @@
     "@react-navigation/material-top-tabs": "^5.3.9",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
+    "@types/react-native-snap-carousel": "^3.8.2",
     "@types/react-redux": "^7.1.9",
+    "aws-sdk": "^2.807.0",
     "axios": "^0.21.0",
     "base-64": "^1.0.0",
+    "base64-arraybuffer": "^0.2.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-above-keyboard": "^1.3.0",
     "react-native-actionsheet": "^2.4.2",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-convert-ph-asset": "^1.0.3",
     "react-native-dash": "0.0.11",
     "react-native-device-info": "^7.2.1",
+    "react-native-fs": "^2.16.6",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-map": "0.0.1",
+    "react-native-modal": "^11.5.6",
     "react-native-nmap": "0.0.52",
+    "react-native-phasset": "^1.0.10",
     "react-native-ratings": "^7.3.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-responsive-screen": "^1.4.1",
@@ -45,6 +52,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-status-bar-height": "^2.5.0",
     "react-native-tab-view": "^2.15.2",
+    "react-native-upload-aws-s3": "^0.8.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "rn-sliding-up-panel": "^2.4.4",
