Review 상세보기 & 리스트 서버 연동

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/image-editor": "^2.3.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^10.3.0",
+    "@react-native-firebase/messaging": "^10.3.1",
     "@react-native-seoul/kakao-login": "^2.10.1",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/material-top-tabs": "^5.3.9",
@@ -48,7 +50,8 @@
     "react-native-ratings": "^7.3.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-responsive-screen": "^1.4.1",
-    "react-native-safe-area-context": "^3.1.8",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.11.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^3.9.1",
