--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "react-native-convert-ph-asset": "^1.0.3",
     "react-native-dash": "0.0.11",
     "react-native-device-info": "^7.2.1",
+    "react-native-fast-image": "^8.3.4",
     "react-native-fs": "^2.16.6",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-resizer": "^1.4.1",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-map": "0.0.1",
