--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/react-native-snap-carousel": "^3.8.2",
     "@types/react-redux": "^7.1.9",
     "aws-sdk": "^2.807.0",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "base-64": "^1.0.0",
     "base64-arraybuffer": "^0.2.0",
     "react": "16.13.1",
@@ -42,6 +42,7 @@
     "react-native-fs": "^2.16.6",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-picker": "^3.1.3",
     "react-native-image-resizer": "^1.4.1",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
