--- a/package.json
+++ b/package.json
@@ -43,8 +43,11 @@
     "react-native-fs": "^2.16.6",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-haptic-feedback": "^1.11.0",
+    "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-picker": "^3.1.3",
     "react-native-image-resizer": "^1.4.1",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-map": "0.0.1",
@@ -57,12 +60,14 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.11.0",
+    "react-native-shared-element": "^0.7.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-status-bar-height": "^2.5.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-upload-aws-s3": "^0.8.1",
+    "react-navigation-shared-element": "^5.0.0-alpha1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "rn-sliding-up-panel": "^2.4.4",
