--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-ratings": "^7.3.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-responsive-screen": "^1.4.1",
+    "react-native-root-siblings": "^4.1.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.11.0",
