--- a/ios/chikaApp/Info.plist
+++ b/ios/chikaApp/Info.plist
@@ -41,6 +41,8 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<string>0</string>
 	<key>KAKAO_APP_KEY</key>
 	<string>0528ffa400f348fc61a241b399e8d8d1</string>
 	<key>LSApplicationQueriesSchemes</key>
@@ -98,6 +100,8 @@
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
+	<key>UIMainStoryboardFile</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
