--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-shared-element": "^0.7.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-status-bar-height": "^2.5.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^2.15.2",
