--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.21.1",
     "base-64": "^1.0.0",
     "base64-arraybuffer": "^0.2.0",
+    "immutable": "^4.0.0-rc.12",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-above-keyboard": "^1.3.0",
