--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-image-picker": "^3.1.4",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-map": "0.0.1",
     "react-native-modal": "^11.5.6",
     "react-native-nmap": "0.0.52",
