--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.1.0",
     "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-community/blur": "^3.6.0",
     "@react-native-community/cameraroll": "^4.0.1",
     "@react-native-community/datetimepicker": "^3.0.4",
     "@react-native-community/google-signin": "^5.0.0",
@@ -52,6 +53,7 @@
     "react-native-map": "0.0.1",
     "react-native-modal": "^11.5.6",
     "react-native-nmap": "0.0.52",
+    "react-native-permissions": "^3.0.0",
     "react-native-phasset": "^1.0.10",
     "react-native-ratings": "^7.3.0",
     "react-native-reanimated": "^1.13.1",
