--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "base-64": "^1.0.0",
     "base64-arraybuffer": "^0.2.0",
     "immutable": "^4.0.0-rc.12",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-above-keyboard": "^1.3.0",
