알림 화면 좋아요, 댓글알림 합침

--- a/ios/chikaApp/Info.plist
+++ b/ios/chikaApp/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>ko_KR</string>
 	<key>CFBundleDisplayName</key>
-	<string>chikaApp</string>
+	<string>치카치카</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
