--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-native-firebase/messaging": "^10.3.1",
     "@react-native-picker/picker": "^1.9.10",
     "@react-native-seoul/kakao-login": "^2.10.1",
-    "@react-navigation/bottom-tabs": "^5.9.2",
+    "@react-navigation/bottom-tabs": "^5.2.5",
     "@react-navigation/material-top-tabs": "^5.3.9",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
@@ -49,6 +49,7 @@
     "react-native-gesture-handler": "^1.9.0",
     "react-native-haptic-feedback": "^1.11.0",
     "react-native-image-picker": "^3.1.4",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-linear-gradient": "^2.5.6",
