kakao login fixed & sign out process added

--- a/ios/chikaApp/Info.plist
+++ b/ios/chikaApp/Info.plist
@@ -49,7 +49,7 @@
 	<array>
 		<string>tel</string>
 		<string>telprompt</string>
-		<string>kakaokompathauth</string>
+		<string>kakaokompassauth</string>
 		<string>kakao0528ffa400f348fc61a241b399e8d8d1</string>
 		<string>kakaolink</string>
 		<string>kakaotalk-5.9.7</string>
