--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,9 +3,19 @@
 buildscript {
     ext {
         buildToolsVersion = "29.0.2"
-        minSdkVersion = 16
+        minSdkVersion = 21
         compileSdkVersion = 29
         targetSdkVersion = 29
+        supportLibVersion = '1.0.2' // Use '28.0.0' or don't specify for old libraries, '1.0.2' or similar for AndroidX
+        mediaCompatVersion = '1.0.1' // Do not specify if using old libraries, specify '1.0.1' or similar for androidx.media:media dependency
+        supportV4Version = '1.0.0' // Do not specify if using old libraries, specify '1.0.0' or similar for androidx.legacy:legacy-support-v4 dependency
+
+        //Option 1 (latest):
+        firebaseIidVersion = "19.0.1" // default: "19.0.1"
+        //Option 2 (legacy GooglePlay dependency but using AndroidX):
+        googlePlayServicesIidVersion = "17.0.0" // default: "17.0.0" - AndroidX
+        //Option 3 (legacy GooglePlay dependency before AndroidX):
+        googlePlayServicesIidVersion = "16.0.1"
 
         googlePlayServicesVersion = "17.0.0"
         googlePlayServicesVisionVersion = "19.0.0"
@@ -17,7 +27,7 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.5.3")
-        classpath 'com.google.gms:google-services:4.3.4'
+        classpath 'com.google.gms:google-services:4.3.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -41,7 +51,7 @@ allprojects {
 
         // 네이버 지도 저장소
         maven {
-            url 'https://navercorp.bintray.com/maps'
+            url 'https://naver.jfrog.io/artifactory/maven/'
         }
 
         // 카카오톡
