--- a/ios/Podfile
+++ b/ios/Podfile
@@ -11,9 +11,6 @@ target 'chikaApp' do
   pod 'Permission-LocationAlways', :path => "#{permissions_path}/LocationAlways"
   pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse"
 
-  # Explicitly include Yoga if you are using RN >= 0.42.0
-  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
-
   pod 'react-native-image-editor', :path => '../node_modules/@react-native-community/image-editor'
   pod 'RNFS', :path => '../node_modules/react-native-fs'
 
@@ -27,6 +24,19 @@ target 'chikaApp' do
   pod 'RNSharedElement', :path => '../node_modules/react-native-shared-element'
 
   pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+  
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
+
+
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
+  pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
+
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
+  pod 'react-native-nmap', :path => '../node_modules/react-native-nmap'
 
   target 'chikaAppTests' do
     inherit! :complete
