--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'chikaApp'
+include ':react-native-geolocation-service'
+project(':react-native-geolocation-service').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-geolocation-service/android')
 include ':react-native-nmap'
 project(':react-native-nmap').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-nmap/android')
 include ':react-native-splash-screen'
