register navigation header on android

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -40,6 +40,8 @@ target 'chikaApp' do
 
   pod 'react-native-geolocation-service', :path => '../node_modules/react-native-geolocation-service'
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'chikaAppTests' do
     inherit! :complete
     # Pods for testing
