--- a/package.json
+++ b/package.json
@@ -64,11 +64,13 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.11.0",
+    "react-native-shadow": "^1.2.2",
     "react-native-shared-element": "^0.7.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-status-bar-height": "^2.5.0",
+    "react-native-svg": "^12.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-upload-aws-s3": "^0.8.1",
