--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,7 +10,8 @@ target 'chikaApp' do
   
   pod 'Permission-LocationAlways', :path => "#{permissions_path}/LocationAlways"
   pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse"
-
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+  pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
   pod 'react-native-image-editor', :path => '../node_modules/@react-native-community/image-editor'
   pod 'RNFS', :path => '../node_modules/react-native-fs'
 
